[tool.poetry]
name = "packrat0"
version = "0.1.0"
description = ""
authors = ["Cheuk Yin Ng <chucksys88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"
psycopg2 = "^2.8.6"
Flask-Migrate = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
